--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <main>
+        <div class="calculator-container">
+            <div class="display">
+                <input type="text">
+            </div>
+            <div class="numbers">
+                <div class="upper-keys numbers-child">
+                    <button class="numbers-btn">7</button>
+                    <button class="numbers-btn">8</button>
+                    <button class="numbers-btn">9</button>
+                    <button class="operators-btn">/</button>
+                </div>
+                <div class="middle-keys numbers-child">
+                    <button class="numbers-btn">4</button>
+                    <button class="numbers-btn">5</button>
+                    <button class="numbers-btn">6</button>
+                    <button class="operators-btn">-</button>
+                </div>
+                <div class="lower-keys numbers-child">
+                    <button class="numbers-btn">1</button>
+                    <button class="numbers-btn">2</button>
+                    <button class="numbers-btn">3</button>
+                    <button class="operators-btn">+</button>
+                </div>
+                <div class="lowest numbers-child">
+                    <button class="numbers-btn">.</button>
+                    <button class="numbers-btn">0</button>
+                    <button class="numbers-btn">=</button>
+                    <button class="operators-btn">x</button>
+                </div>
+            </div>
+        </div>
+    </main>
+
 </body>
 </html>
