--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
     <title>Calculator</title>
 </head>
 <body>
     <main>
         <div class="calculator-container">
             <div class="display">
-                <input type="text">
+                <input type="text" spellcheck="false">
             </div>
             <div class="numbers">
                 <div class="upper-keys numbers-child">
                     <button class="numbers-btn">7</button>
                     <button class="numbers-btn">8</button>
                     <button class="numbers-btn">9</button>
-                    <button class="operators-btn">/</button>
+                    <button class="operators-btn">÷</button>
                 </div>
                 <div class="middle-keys numbers-child">
                     <button class="numbers-btn">4</button>
@@ -36,11 +35,11 @@
                     <button class="numbers-btn">.</button>
                     <button class="numbers-btn">0</button>
                     <button class="numbers-btn">=</button>
-                    <button class="operators-btn">x</button>
+                    <button class="operators-btn">×</button>
                 </div>
             </div>
         </div>
     </main>
-
+    <script src="script.js"></script>
 </body>
 </html>
