Update Design and Logic
Added an AC button to clear all data from the calculator and designed it.
Built the logic for AC to work and added some basic operations functions .

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="calculator-container">
             <div class="display">
                 <input type="text" spellcheck="false">
+                <button class="clear">AC</button>
             </div>
             <div class="numbers">
                 <div class="upper-keys numbers-child">
