--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
                 <button class="clear">AC</button>
             </div>
             <div class="numbers">
-                <div class="upper-keys numbers-child">
+                <div class="upper-keys">
                     <button class="numbers-btn">7</button>
                     <button class="numbers-btn">8</button>
                     <button class="numbers-btn">9</button>
                     <button class="operators-btn">÷</button>
                 </div>
-                <div class="middle-keys numbers-child">
+                <div class="middle-keys">
                     <button class="numbers-btn">4</button>
                     <button class="numbers-btn">5</button>
                     <button class="numbers-btn">6</button>
                     <button class="operators-btn">-</button>
                 </div>
-                <div class="lower-keys numbers-child">
+                <div class="lower-keys">
                     <button class="numbers-btn">1</button>
                     <button class="numbers-btn">2</button>
                     <button class="numbers-btn">3</button>
                     <button class="operators-btn">+</button>
                 </div>
-                <div class="lowest numbers-child">
+                <div class="lowest">
                     <button class="numbers-btn">.</button>
                     <button class="numbers-btn">0</button>
                     <button class="numbers-btn">=</button>
