Complete Initial Logic
Completed the initial logic for the calculator to function correctly
Made code more modular and clean using functions.
Further improvements and code will be for optimization purposes.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="lowest">
                     <button class="numbers-btn">.</button>
                     <button class="numbers-btn">0</button>
-                    <button class="numbers-btn">=</button>
+                    <button class="numbers-btn operators-btn">=</button>
                     <button class="operators-btn">×</button>
                 </div>
             </div>
